feat: added link portfolio and icon

--- a/index.html
+++ b/index.html
@@ -2,26 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type=image/x-icon href="/assets/favicon.ico" />
+    <link rel="icon" type=image/x-icon href="/assets/profile1.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>codi.link.leo | proyecto-de-midudev </title>
+    <title>codi.link.leo | proyecto-de-midudev</title>
   </head>
   <body>
     <div id="app">
-
+      <a
+        href="https://portfolio-sainz-leonardo.vercel.app/"
+        target="_blank"
+        class="redirect"
+      >
+        <img
+          class="img--profile"
+          src="assets/profile1.svg"
+          alt="My Happy SVG"
+        />
+        Leonardo Sainz</a
+      >
       <div class="grid">
-        <div class='editor' id='html'></div>
-        <div class='editor' id='js'></div>
-        <div class='editor' id='css'></div>
+        <div class="editor" id="html"></div>
+        <div class="editor" id="js"></div>
+        <div class="editor" id="css"></div>
 
         <div>
-          <iframe srcdoc="<h1>Proyecto creado a partir del tutorial de midudev</h1>"></iframe>
+          <iframe
+            srcdoc="<h1>Proyecto creado a partir del tutorial de midudev</h1>"
+          ></iframe>
         </div>
 
         <div class="vertical-gutter"></div>
         <div class="horizontal-gutter"></div>
       </div>
-
     </div>
     <script type="module" src="/main.js"></script>
   </body>
